--- a/streams/client/package.json
+++ b/streams/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
+    "faker": "^4.1.0",
     "flv.js": "^1.5.0",
     "lodash": "^4.17.15",
     "react": "^16.11.0",
